--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,5 +1,4 @@
-# 启用测试
-enable_testing()
-
-# 添加子目录
-add_subdirectory(unit)
+if(BUILD_TESTING)
+    add_subdirectory(Unit)
+    add_subdirectory(Integration)
+endif()
